--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 
 
 /* BODY STYLE */
+.container{
 
+}
 .ba{
       background: rgb(15,15,36);
       background: linear-gradient( rgba(15,15,36,1) 10%,rgba(44,32,84,1) 50%,rgba(114,65,93,1) 63%, rgba(230,105,87,1) 80%, rgba(0,0,46,1) 100%);
@@ -12,7 +14,7 @@
 
 
     .sideline{
-        height: 2280px; position:absolute; margin-left: 70px; margin-top: 400px; z-index: 7000; left:0px;
+        height: 100vw; position:absolute; margin-left: 70px; margin-top: 400px; z-index: 7000; left:0px;
     }
     html, body {
         max-width: 100%;
@@ -52,13 +54,14 @@
     top:0px;
     grid-template-columns: repeat(8, 1fr);
     grid-auto-rows: minmax(100px, auto);
+    overflow: hidden;
     }
     .gridsystem1 #RadiationText{
         cursor: pointer;
         grid-column-start: 1;
         grid-column-end: 6;
-        margin-left: 120px;
-        margin-top: 180px;
+        margin-left: 8em;
+        margin-top: 10em;
         opacity: 0;
         float:left;
         z-index: 1000;
@@ -67,11 +70,10 @@
 
     .gridsystem1 #sunanim{
         cursor: pointer;
-        grid-column-start: 7;
+        grid-column-start: 6;
         grid-column-end: auto;
-        margin-top: 10px;
-        margin-right: -300px;
-        float: top right;
+        width: 30vw;
+        margin-top: 5em;
         animation: 1.5s ease-out 0s slideInFromTop1; 
         z-index: 900;
         }
@@ -122,21 +124,19 @@
         z-index: 1;
         grid-column-start: 5;
         grid-column-end: 9;
-        margin-top:0px;
         position: absolute;
         opacity: 100%;
         right: 0px;
         }        
 
     .gridsystem1 #Starsystemstatic{
-        grid-column-start: 5;
+        grid-column-start: 7;
         grid-column-end: auto;
-        position: absolute;
+        width: 25vw;
         opacity: 100%;
-        right: 0px;
         animation: 1.5s ease-out 0s slideInFromRight1; 
-        margin-right: 150px; 
-        margin-top: 390px;
+        margin-left: -50em; 
+     
 
     }
         @keyframes slideInFromTop1 {
@@ -167,10 +167,10 @@
 
 
     .gridsystem1 #Asteroid{ 
-        margin-top:100px;
-        grid-column-start: 8;
-        margin-right: 100px;
-        width:120px;
+        margin-top:5em;
+        grid-column-start: 7;
+        margin-left: -15em;
+        width: 10vw;
         grid-column-end: auto;
         right: 0px;
 
@@ -195,7 +195,6 @@
     .gridsystem1 #Skylayer2{
         grid-column-start: 1;
         grid-column-end: auto;
-        position: absolute;
         opacity: 100%;
         left: 0px;
         margin-top: 380px;
@@ -223,8 +222,9 @@
         animation: 1.5s ease-out 0s slideInFromLeft;
         position: absolute;
         left:0px;
-        margin-left: 120px;
-        margin-top: 500px;
+        width: 20vw;
+        margin-left: 8em;
+        margin-top: 40em;
         animation-fill-mode: forwards; 
         z-index: 990;
         }
@@ -244,22 +244,20 @@
 
     .gridsystem1 #Planet2{
         position: absolute;
-        right:0px;
-        width: 330px;
-        margin-top: 670px;
+        right: 3em;
+        margin-top: 35em;
         animation: 1.5s ease-out 0s slideInFromRight;
         z-index: 990;
         }
 
     .gridsystem1 #Satellite{
         cursor: pointer;
-        grid-column-start: 8;
-        grid-row-start: 2;
+        grid-column-start: 6;
+        grid-row-start: 4;
         grid-column-end: auto;
-        margin-left:-400px;
-        margin-top: 500px;
-        width: 130px;
-        z-index: 1100;
+        margin-left: 10em;
+        margin-top: -30em;
+        z-index: 3100;
         animation: 1.5s ease-out 0s slideInFromRight;
         }
 
@@ -268,31 +266,68 @@
         position: absolute;
         opacity: 100%;
         right: 0px;
-        z-index: -1;
+        z-index: 0;
         }
 
         .gridsystem1 #DeepSpaceText{
             cursor: pointer;
-            margin-top:0px;
-            width: 480px;
-            grid-column-start: 7;
+            margin-top:-10em;
+            width: 30em;
+            grid-column-start: 6;
             grid-column-end: auto;
-            grid-row-start: 3;
+            grid-row-start: 4;
             opacity: 0;
-            z-index: 2010;
+            z-index: 4010;
             }
 
 
         .gridsystem1 #Starsystem{
             cursor: pointer;
-            margin-top: 900px;
-            margin-left: 139px;
+            margin-top: 70em;
+            margin-left: 10em;
             position: absolute;
             grid-column-start: 1;
             width:800px;
             z-index: 2010;
             }
-
+            #starline1 {
+                stroke-dasharray: 2000;
+                animation: stardash 5s linear infinite;
+              }
+            #starline2 {
+                stroke-dasharray: 2000;
+                animation: stardash2 5s linear infinite;
+              }
+              #starline3 {
+                stroke-dasharray: 2000;
+                animation: stardash 5s linear infinite;
+              }
+              #starcurve {
+                stroke-dasharray: 2000;
+                animation: stardash2 5s linear infinite;
+              }
+              @keyframes stardash {
+                0% {
+                  stroke-dashoffset: 3000;
+                }
+                50% {
+                    stroke-dashoffset: 4000;
+                  }
+                  100% {
+                    stroke-dashoffset: 4000;
+                  }
+              }
+              @keyframes stardash2 {
+                0% {
+                  stroke-dashoffset: 6000;
+                }
+                50% {
+                    stroke-dashoffset: 4000;
+                  }
+                  100% {
+                    stroke-dashoffset: 4000;
+                  }
+              }
 
     .gridsystem1 #Powerstation{
         cursor: pointer;
@@ -308,8 +343,8 @@
             cursor: pointer;
             width: 550px;
             grid-column-start: 2;
-            margin-left: 350px;
-            margin-top: 600px;
+            margin-left: 25em;
+            margin-top: 30em;
             opacity: 0;
             z-index: 2011;
             }
@@ -335,16 +370,96 @@
 
             .gridsystem1 #Particle{
                 position: absolute;
-                left: 47%;
+                width: 50vw;
+                left: 40%;
                 transform: translate(-50%, -50%);
                 z-index: 1100;
                 margin-top: 1890px;
                     
                 }
                     
+                #pmain {
+                    stroke-dasharray: 4000;
+                    animation: maindash 10s linear infinite;
+                  }
+                  
+                  @keyframes maindash {
+                    0% {
+                      stroke-dashoffset: 4000;
+                    }
+                    25% {
+                        stroke-dashoffset: 8000;
+                      }
+                      50% {
+                        stroke-dashoffset: 8000;
+                      }
+                      75% {
+                        stroke-dashoffset: 8000;
+                      }
+                      100% {
+                        stroke-dashoffset: 8000;
+                      }
+                  }
+                  #psecond {  
+                    animation: secdash 10s linear infinite;
+                  }
+                  
+                  @keyframes secdash {
+                    0% {
+                      stroke-dasharray: 2500;
+                        stroke-dashoffset: 2500;
+                    }
+                    25% {
+                        stroke-dashoffset: 2500;
+                      }
+                      50% {
+                        stroke-dashoffset: 5000;
+                      }
+                      75% {
+                        stroke-dashoffset: 5000;
+                      }
+                      100% {
+                        stroke-dashoffset: 5000;
+                      }
+                  }
+                  #pthird {
+                    stroke-dasharray: 2500;
+                    animation: thirddash 10s linear infinite;
+                  }
+                  
+                  @keyframes thirddash {
+                    0% {
+                        stroke-dasharray: 2500;
+                      stroke-dashoffset: 2500;
+                    }
+                    25% {
+                        stroke-dasharray: 2500;
+                        stroke-dashoffset: 2500;
+                      }
+                      50% {
+                        stroke-dasharray: 2500;
+                        stroke-dashoffset: 2500;
+                      }
+                      75% {
+                        stroke-dasharray: 500;
+                        stroke-dashoffset: 1000;
+                      }
+                      100% {
+                        stroke-dasharray: 2500;
+                        stroke-dashoffset: 5000;
+                      }
+                  }
 
-
-     
+                  #starsys1:hover{
+                    animation: startwink 3s  linear infinite;
+                    transform-origin: absolute;
+             
+                }
+                @keyframes startwink{
+                   0% { opacity:0; }
+                  50% { opacity:1; }
+                  100% { opacity:0; }
+                    }
 
 
             #TextTitle{
@@ -389,9 +504,11 @@
 
         /* REVEAL ON SCROLL */
 .gridsystem2{
+    width: 100vw;
     position: relative;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 28em;
+    overflow: hidden;
 }
 .topright {
     position: absolute;
@@ -401,7 +518,6 @@
   }
   .topleft {
     position: absolute;
-    margin-top: -100px;
     left: 200px;
     z-index: 3010;
   }
@@ -438,7 +554,7 @@
                     }
                     
                     100% {
-                        transform: translateX(200%);
+                        transform: translateX(500%);
                         opacity: 100%;
                     }
                 }
