--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
         }
         .gridsystem1 #circle:active{
             filter: invert(2%) sepia(1%) saturate(278%) hue-rotate(6deg) brightness(104%) contrast(97%);
-            animation: oraymove 3s  linear infinite;
+            animation: oraymove 3s ease-in-out ;
             transform-origin: center;
             
         }
@@ -256,7 +256,7 @@
         grid-row-start: 4;
         grid-column-end: auto;
         margin-left: 10em;
-        margin-top: -30em;
+        margin-top: -70em;
         z-index: 3100;
         animation: 1.5s ease-out 0s slideInFromRight;
         }
@@ -336,7 +336,8 @@
 
         .gridsystem1 #DeepSpaceText{
             cursor: pointer;
-            margin-top:-10em;
+            margin-top:-55em;
+            margin-left: 10em;
             width: 30em;
             grid-column-start: 6;
             grid-column-end: auto;
@@ -399,10 +400,10 @@
         position: absolute;
         right:0px;
         margin-right: 450px;;
-        margin-top:1400px;
+        margin-top:90em;
         grid-column-start: 1;
         width: 300px;
-        z-index: 2020;
+        z-index: 5050;
         }
         .gridsystem1 #GeoText{
             cursor: pointer;
@@ -418,10 +419,10 @@
                 cursor: pointer;
                 grid-column: 5/9;
                 width: 350px;
-                margin-top: 370px;
+                margin-top: 60em;
                 right:0px;
                 opacity: 0;
-                z-index: 3010;
+                z-index: 4010;
                 }   
                 .gridsystem1 #Rocket{
                     position: absolute;
