--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 
 
 
-/* BODY STYLE */
-.container{
+/* =================
+BODY STYLE 
+===================*/
 
-}
 .ba{
       background: rgb(15,15,36);
       background: linear-gradient( rgba(15,15,36,1) 10%,rgba(44,32,84,1) 50%,rgba(114,65,93,1) 63%, rgba(230,105,87,1) 80%, rgba(0,0,46,1) 100%);
@@ -14,14 +14,21 @@
 
 
     .sideline{
-        height: 100vw; position:absolute; margin-left: 70px; margin-top: 400px; z-index: 7000; left:0px;
+        position:absolute; 
+        height: 100vw; 
+        left: 2vw; 
+        top: 20vw; 
+        margin-top:150px;
+        z-index: 7000; 
     }
     html, body {
         max-width: 100%;
        
     }
 
-/* HEADER STYLE */
+/* =================
+Header Style
+===================*/
     .header{
         background-color: black;
         color: white;
@@ -47,32 +54,79 @@
 
 
 
-/* PART ONE STYLE */
+/* =================
+Grid System 1 Style
+===================*/
 
-.gridsystem1 { 
-    display: grid;
-    top:0px;
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    .gridsystem1 { 
+    display: fixed;
+    margin-top: 80px;
     overflow: hidden;
     }
+
+ /* Grid System 1 Text */
     .gridsystem1 #RadiationText{
         cursor: pointer;
-        grid-column-start: 1;
-        grid-column-end: 6;
-        margin-left: 8em;
-        margin-top: 10em;
+        position: absolute;
+        width: 28vw;
+        top: 5vw;
+        margin-top: 150px;
+        left: 6vw;
+        font-size: 18px;
         opacity: 0;
-        float:left;
-        z-index: 1000;
+        z-index: 4010;
         }
- 
 
+     .gridsystem1 #DeepSpaceText{
+         position: absolute;
+        cursor: pointer;
+        top: 40vw;
+        margin-top: 200px;
+        right: 20vw;
+        width: 30em;
+         opacity: 0;
+        z-index: 4010;
+        }
+    .gridsystem1 #GeoText{
+        position: absolute;
+        cursor: pointer;
+        width: 550px;
+        left: 14vw;
+        margin-left: 70px;
+        top: 32vw;
+        margin-top: 180px;
+        opacity: 0;
+        z-index: 4011;
+        }
+
+     .gridsystem1 #LowEarthText{
+        cursor: pointer;
+        position: absolute;
+        width: 350px;
+        top: 60vw;
+        margin-top: 100px;
+        right: 32vw;
+        margin-right: 50px;
+        opacity: 0;
+        z-index: 4010;
+        } 
+    .gridsystem1 #AirplaneText{
+        position: absolute;
+        cursor: pointer;
+        margin-left: 10vw;
+        top: 65vw;
+        margin-top: 200px;
+        opacity: 0;
+         z-index: 4010;
+            }  
+
+    /* Grid System 1 Images */
     .gridsystem1 #sunanim{
         cursor: pointer;
-        grid-column-start: 6;
-        grid-column-end: auto;
-        width: 30vw;
+        position: absolute;
+        top: 80px;
+        right: 17vw;
+        width: 35vw;
         margin-top: 5em;
         animation: 1.5s ease-out 0s slideInFromTop1; 
         z-index: 900;
@@ -121,17 +175,16 @@
            
 
     .gridsystem1 #Skylayer1{
-        z-index: 1;
-        grid-column-start: 5;
-        grid-column-end: 9;
+        
         position: absolute;
         opacity: 100%;
+        top: 70px;
         right: 0px;
+        z-index: 1;
         }        
 
     .gridsystem1 #Starsystemstatic{
-        grid-column-start: 7;
-        grid-column-end: auto;
+position: absolute;
         width: 25vw;
         opacity: 100%;
         animation: 1.5s ease-out 0s slideInFromRight1; 
@@ -167,12 +220,10 @@
 
 
     .gridsystem1 #Asteroid{ 
-        margin-top:5em;
-        grid-column-start: 7;
-        margin-left: -15em;
+        position: absolute;
         width: 10vw;
-        grid-column-end: auto;
-        right: 0px;
+        margin-top: 6vw;
+        right: 10vw;
 
         animation: 1.5s ease-out 0s slideInFromRight;
         animation-fill-mode: forwards; 
@@ -197,7 +248,8 @@
         grid-column-end: auto;
         opacity: 100%;
         left: 0px;
-        margin-top: 380px;
+        top: 100vw;
+        margin-top: 100px;
         z-index: 1;
         width: 20%;
         }
@@ -210,10 +262,11 @@
         font-size: 19px;
         text-transform: uppercase;
         color:white;
-        float: left;
+        left: 0px;
+        top: 0px;
         margin-top: 500px;
         margin-left: 83px;
-        position:fixed;
+        position: absolute;
         z-index: 1010;
         }
 
@@ -223,8 +276,10 @@
         position: absolute;
         left:0px;
         width: 20vw;
-        margin-left: 8em;
-        margin-top: 40em;
+        left: 7vw;
+        top: 12vw;
+        margin-left: 70px;
+        margin-top: 150px;
         animation-fill-mode: forwards; 
         z-index: 990;
         }
@@ -245,18 +300,19 @@
     .gridsystem1 #Planet2{
         position: absolute;
         right: 3em;
-        margin-top: 35em;
+        top: 20vw;
+        margin-top: 200px;
         animation: 1.5s ease-out 0s slideInFromRight;
         z-index: 990;
         }
 
     .gridsystem1 #Satellite{
+        position: absolute;
         cursor: pointer;
-        grid-column-start: 6;
-        grid-row-start: 4;
-        grid-column-end: auto;
-        margin-left: 10em;
-        margin-top: -70em;
+        right: 7vw;
+        margin-right: 25px;
+        top: 33vw;
+        margin-top: 175px;
         z-index: 3100;
         animation: 1.5s ease-out 0s slideInFromRight;
         }
@@ -327,30 +383,22 @@
             }
         }
     .gridsystem1 #Skylayer3{
-        margin-top:1500px;
         position: absolute;
+        top: 30vw;
+        margin-top: 300px;
         opacity: 100%;
         right: 0px;
         z-index: 0;
         }
 
-        .gridsystem1 #DeepSpaceText{
-            cursor: pointer;
-            margin-top:-55em;
-            margin-left: 10em;
-            width: 30em;
-            grid-column-start: 6;
-            grid-column-end: auto;
-            grid-row-start: 4;
-            opacity: 0;
-            z-index: 4010;
-            }
+     
 
 
         .gridsystem1 #Starsystem{
             cursor: pointer;
-            margin-top: 70em;
-            margin-left: 10em;
+            top: 32vw;
+            margin-top: 100px;
+            left: 5vw;
             position: absolute;
             grid-column-start: 1;
             width:800px;
@@ -398,51 +446,33 @@
     .gridsystem1 #Powerstation{
         cursor: pointer;
         position: absolute;
-        right:0px;
-        margin-right: 450px;;
-        margin-top:90em;
-        grid-column-start: 1;
-        width: 300px;
+        right: 22vw;
+        margin-right: 80px;
+        margin-top: 60vw;
+        width: 10vw;
         z-index: 5050;
         }
-        .gridsystem1 #GeoText{
-            cursor: pointer;
-            width: 550px;
-            grid-column-start: 2;
-            margin-left: 25em;
-            margin-top: 30em;
-            opacity: 0;
-            z-index: 2011;
-            }
+  
+    .gridsystem1 #Rocket{
+        position: absolute;
+        width: 23vw;
+        top: 50vw;
+        margin-top: 150px;
+        right: 0px;
+        margin-right: 0px;
+        animation: 1.5s ease-out 0s slideInFromRight;
+        z-index: 990;
+        }
 
-            .gridsystem1 #LowEarthText{
-                cursor: pointer;
-                grid-column: 5/9;
-                width: 350px;
-                margin-top: 60em;
-                right:0px;
-                opacity: 0;
-                z-index: 4010;
-                }   
-                .gridsystem1 #Rocket{
-                    position: absolute;
-                    right:0px;
-                    width: 300px;
-                    margin-top: 1300px;
-                    margin-right:100px;
-                    animation: 1.5s ease-out 0s slideInFromRight;
-                    z-index: 990;
-                    }
-
-            .gridsystem1 #Particle{
-                position: absolute;
-                width: 50vw;
-                left: 40%;
-                transform: translate(-50%, -50%);
-                z-index: 1100;
-                margin-top: 1890px;
-                    
-                }
+    .gridsystem1 #Particle{
+        position: absolute;
+        width: 50vw;
+        left: 40%;
+        transform: translate(-50%, -50%);
+        z-index: 1100;
+        top: 70vw;
+        margin-top: 200px;        
+        }
                     
                 #pmain {
                     stroke-dasharray: 4000;
@@ -542,7 +572,7 @@
                 font-family: Almarai;
                 font-weight:2px;
                 letter-spacing: 2px;
-                font-size: 20px;
+                font-size: 1.75rem;
                 text-transform: uppercase;
                 padding: 0px 30px 0px;
                 line-height: 324px0;
@@ -554,7 +584,7 @@
                 font-family: Almarai;
                 font-weight:2px;
                 letter-spacing: 2px;
-                font-size: 2.5em;
+                font-size: 2.5rem;
                 text-transform: uppercase;
                 padding: 0px 30px 0px;
                 line-height: 1em;
@@ -567,7 +597,7 @@
                 letter-spacing: 1.5px;
                 font-weight: 100;
                 font-style:normal;
-                font-size: 18px;
+                font-size: 1.25rem;
                 padding: 10px 30px 0px;
                 line-height: 30px;
                 color:white;
@@ -583,20 +613,18 @@
     width: 100vw;
     position: relative;
     text-align: center;
-    margin-top: 5em;
+    top: 18vw;
+    margin-top: -10px;
     overflow: hidden;
 }
 .topright {
     position: absolute;
-    top: 400px;
-    right: 160px;
+    top: 20vw;
+    right: 12vw;
+    margin-right:-20px;
     z-index: 3010;
   }
-  .topleft {
-    position: absolute;
-    left: 200px;
-    z-index: 3010;
-  }
+
 
 #GroundLevel{
             cursor: pointer;
@@ -640,12 +668,7 @@
                     }
 
 
-            #AirplaneText{
-                cursor: pointer;
-                margin-left: 200px;
-                opacity: 0;
-                z-index: 5000;
-                }  
+
          #Train{
              animation: Trainmove 15s  linear infinite;
              float: left;
