--- a/style.css
+++ b/style.css
@@ -65,12 +65,48 @@ Grid System 1 Style
     }
 
  /* Grid System 1 Text */
+ #TextTitle{
+    font-family: Almarai;
+    font-weight:2px;
+    letter-spacing: 2px;
+    font-size: 1.75rem;
+    text-transform: uppercase;
+    padding: 0px 30px 0px;
+    line-height: 1.75rem;
+    color:white;
+    transition: opacity 0.7s;
+   
+}
+#h3{
+    font-family: Almarai;
+    font-weight:2px;
+    letter-spacing: 2px;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    padding: 0px 30px 0px;
+    line-height: 1em;
+    color:white;
+    transition: opacity 0.7s;
+   
+}
+#TextBody{
+    font-family: Helvetica;
+    letter-spacing: 1.5px;
+    font-weight: 100;
+    font-style:normal;
+    font-size: 1.25rem;
+    padding: 10px 30px 0px;
+    line-height: 30px;
+    color:white;
+    transition: opacity 0.7s;
+    
+}
     .gridsystem1 #RadiationText{
         cursor: pointer;
         position: absolute;
-        width: 28vw;
+        width: 35vw;
         top: 5vw;
-        margin-top: 150px;
+        margin-top: 70px;
         left: 6vw;
         font-size: 18px;
         opacity: 0;
@@ -567,43 +603,6 @@ position: absolute;
                   100% { opacity:0; }
                     }
 
-
-            #TextTitle{
-                font-family: Almarai;
-                font-weight:2px;
-                letter-spacing: 2px;
-                font-size: 1.75rem;
-                text-transform: uppercase;
-                padding: 0px 30px 0px;
-                line-height: 324px0;
-                color:white;
-                transition: opacity 0.7s;
-               
-            }
-            #h3{
-                font-family: Almarai;
-                font-weight:2px;
-                letter-spacing: 2px;
-                font-size: 2.5rem;
-                text-transform: uppercase;
-                padding: 0px 30px 0px;
-                line-height: 1em;
-                color:white;
-                transition: opacity 0.7s;
-               
-            }
-            #TextBody{
-                font-family: Helvetica;
-                letter-spacing: 1.5px;
-                font-weight: 100;
-                font-style:normal;
-                font-size: 1.25rem;
-                padding: 10px 30px 0px;
-                line-height: 30px;
-                color:white;
-                transition: opacity 0.7s;
-                
-            }
     
 
 
@@ -706,8 +705,252 @@ position: absolute;
                         opacity: 100%;
                     }
                 }
+/* =================
+Screen Sizes
+===================*/
 
+             @media (max-width: 1200px) {
+                #TextTitle{
+                    font-size: 1.5rem;
+                    line-height: 1.5rem; 
+                }
 
+                #h3{
+                    font-size: 2rem;
+                    line-height: 2rem;  
+                }
+
+                #TextBody{
+                    font-size: 1rem;
+                    line-height: 1rem;
+                    
+                }
+                .gridsystem1 #RadiationText{
+                    width: 40vw;
+                    top: 5vw;
+                    margin-top: 70px;
+                    left: 6vw;
+                    }
+            
+                 .gridsystem1 #DeepSpaceText{
+                    top: 38vw;
+                    margin-top: 200px;
+                    right: 20vw;
+                    width: 30vw;
+                    }
+                .gridsystem1 #GeoText{
+                    width: 50vw;
+                    left: 14vw;
+                    margin-left: 10vw;
+                    top: 32vw;
+                    margin-top: 180px;
+                    }
+            
+                 .gridsystem1 #LowEarthText{
+                    width: 350px;
+                    top: 60vw;
+                    margin-top: 100px;
+                    right: 32vw;
+                    margin-right: 50px;
+
+                    } 
+                .gridsystem1 #AirplaneText{
+                    margin-left: 10vw;
+                    top: 65vw;
+                    margin-top: 200px;
+                }
+                .gridsystem1 #sunanim{
+                    top: 70px;
+                    margin-top: 0px;
+                    }
+         
+
+                 .topright {
+                    top: 20vw;
+                    right: 5vw;
+                     margin-right:-50px;
+                          }
+                }
+
+                @media (max-width: 1000px) {
+                    #TextTitle{
+                        font-size: 1.25rem;
+                        line-height: 1.25rem; 
+                    }
+    
+                    #h3{
+                        font-size: 1.75rem;
+                        line-height: 1.5rem;  
+                    }
+    
+                    #TextBody{
+                        font-size: .75rem;
+                        line-height: .5rem;
+                        
+                    }
+                    .gridsystem1 #RadiationText{
+                        width: 40vw;
+                        top: 5vw;
+                        margin-top: 70px;
+                        left: 6vw;
+                        }
+                
+                     .gridsystem1 #DeepSpaceText{
+                        top: 40vw;
+                        margin-top: 200px;
+                        right: 20vw;
+                        width: 35vw;
+                        }
+                    .gridsystem1 #GeoText{
+                        width: 50vw;
+                        left: 14vw;
+                        margin-left: 10vw;
+                        top: 30vw;
+                        margin-top: 180px;
+                        }
+                
+                     .gridsystem1 #LowEarthText{
+                        width: 50vw;
+                        top: 60vw;
+                        margin-top: 100px;
+                        right: 32vw;
+                        margin-right: 50px;
+    
+                        } 
+                    .gridsystem1 #AirplaneText{
+                        margin-left: 10vw;
+                        top: 65vw;
+                        margin-top: 200px;
+                            }  
+
+                     .topright {
+                        position: absolute;
+                        top: 20vw;
+                        right: 3vw;
+                        margin-right:0px;
+                        z-index: 3010;
+                        }
+                    }
+
+                    @media (max-width: 800px) {
+                        #TextTitle{
+                            font-size: .85rem;
+                            line-height: .80rem; 
+                        }
+        
+                        #h3{
+                            font-size: 1rem;
+                            line-height: 1rem;  
+                        }
+        
+                        #TextBody{
+                            font-size: .5rem;
+                            line-height: .5rem;
+                            
+                        }
+                        .gridsystem1 #RadiationText{
+                            width: 40vw;
+                            top: 5vw;
+                            margin-top: 70px;
+                            left: 6vw;
+                            }
+                    
+                         .gridsystem1 #DeepSpaceText{
+                            top: 40vw;
+                            margin-top: 200px;
+                            right: 20vw;
+                            width: 35vw;
+                            }
+                        .gridsystem1 #GeoText{
+                            width: 50vw;
+                            left: 14vw;
+                            margin-left: 10vw;
+                            top: 30vw;
+                            margin-top: 180px;
+                            }
+                    
+                         .gridsystem1 #LowEarthText{
+                            width: 50vw;
+                            top: 60vw;
+                            margin-top: 100px;
+                            right: 32vw;
+                            margin-right: 50px;
+        
+                            } 
+                        .gridsystem1 #AirplaneText{
+                            margin-left: 10vw;
+                            top: 65vw;
+                            margin-top: 200px;
+                                }  
+    
+                         .topright {
+                            position: absolute;
+                            top: 21vw;
+                            right: 2vw;
+                            margin-right:-30px;
+                            z-index: 3010;
+                            }
+                        }
+
+                        @media (max-width: 480px) {
+                            #TextTitle{
+                                font-size: .5rem;
+                                line-height: .45rem; 
+                            }
+            
+                            #h3{
+                                font-size: .75rem;
+                                line-height: .7rem;  
+                            }
+            
+                            #TextBody{
+                                font-size: .35rem;
+                                line-height: .35rem;
+                                
+                            }
+                            .gridsystem1 #RadiationText{
+                                width: 40vw;
+                                top: 5vw;
+                                margin-top: 70px;
+                                left: 6vw;
+                                }
+                        
+                             .gridsystem1 #DeepSpaceText{
+                                top: 40vw;
+                                margin-top: 200px;
+                                right: 20vw;
+                                width: 35vw;
+                                }
+                            .gridsystem1 #GeoText{
+                                width: 50vw;
+                                left: 14vw;
+                                margin-left: 10vw;
+                                top: 29vw;
+                                margin-top: 150px;
+                                }
+                        
+                             .gridsystem1 #LowEarthText{
+                                width: 50vw;
+                                top: 62vw;
+                                margin-top: 110px;
+                                right: 32vw;
+                                margin-right: 50px;
+            
+                                } 
+                            .gridsystem1 #AirplaneText{
+                                margin-left: 10vw;
+                                top: 65vw;
+                                margin-top: 200px;
+                                    }  
+        
+                             .topright {
+                                position: absolute;
+                                top: 20vw;
+                                right: 1vw;
+                                margin-right:-20px;
+                                z-index: 3010;
+                                }
+                            }
          
           .reveal{
             opacity: 0;
