--- a/style.css
+++ b/style.css
@@ -999,7 +999,7 @@ Screen Sizes
                 
                                 #TextBody{
                                     font-size: .2rem;
-                                    line-height: .21rem;
+                                    line-height: 6px;
                                     
                                 }
                                 .gridsystem1 #RadiationText{
